fixing post-grid styles, image is stretching

--- a/src/assets/scss/_post-grid.scss
+++ b/src/assets/scss/_post-grid.scss
@@ -4,44 +4,54 @@
     text-align: center;
     padding-bottom: 50px;
   }
+}
+.post-grid {
+  display: grid;
+  // for each row, automatically fill, for each cell: min max etc.
+  grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
+  grid-gap: 30px;
+  // making rows all equal the same size, taking biggest frame and make the same height
+  grid-auto-rows: 1fr;
+  padding-bottom: 50px;
 
-  .post-grid {
-    display: grid;
-    // for each row, automatically fill, for each cell: min max etc.
-    grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
-    grid-gap: 30px;
-    // making rows all equal the same size, taking biggest frame and make the same height
-    grid-auto-rows: 1fr;
-    padding-bottom: 50px;
+  figure {
+    height: 100%;
+    max-height: 280px;
+  }
 
-    figure {
-      height: 100%;
-      max-height: 280px;
+  img {
+    position: relative;
+    border-radius: 5px;
+    overflow: hidden;
+    // background-size: cover;
+    // background-position: center center;
+    object-fit: fill;
+    // object-fit: scale-down;
+    object-position: center center;
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
+    max-height: 280px;
+    // min-height: 225px;
+  }
+
+  // needs to flex the image to be 100%
+  .post-container {
+    display: flex;
+    flex-direction: column;
+
+    .author-text {
+      color: $text-light;
     }
 
-    img {
-      position: relative;
-      border-radius: 5px;
-      overflow: hidden;
-      object-fit: cover;
-      object-position: center center;
-      height: 100%;
-      width: 100%;
-      margin: 0 auto;
-      max-height: 280px;
+    a {
+      padding: 0 5px;
     }
 
-    .post-container {
-      display: flex;
-      flex-direction: column;
-
-      .author-text {
-        color: $text-light;
-      }
-
-      a {
-        padding: 0 5px;
-      }
+    .description-text {
+      font-size: 18px;
+      font-weight: 400;
+      color: #555;
     }
   }
 }
